--- a/Cooxi/Web.config
+++ b/Cooxi/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -75,5 +75,6 @@
     </providers>
   </entityFramework>
 <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=Cooxi-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+   <add name="DefaultConnection" connectionString="Data Source=CROW-LAP;Initial Catalog=CooxiDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=cooxi-server.database.windows.net,1433;Initial Catalog=cooxi-db;Persist Security Info=True;User ID=crowmw;Password=MATias19++" providerName="System.Data.SqlClient"/>-->
   </connectionStrings></configuration>
