--- a/Cooxi/Cooxi.csproj
+++ b/Cooxi/Cooxi.csproj
@@ -117,6 +117,10 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Owin.Security.Providers, Version=1.25.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.Security.Providers.1.27\lib\net45\Owin.Security.Providers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -206,9 +210,24 @@
     <Compile Include="Migrations\201602211618288_init.Designer.cs">
       <DependentUpon>201602211618288_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603021104481_add-access-token.cs" />
+    <Compile Include="Migrations\201603021104481_add-access-token.Designer.cs">
+      <DependentUpon>201603021104481_add-access-token.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603021116183_add-insta-userid-name.cs" />
+    <Compile Include="Migrations\201603021116183_add-insta-userid-name.Designer.cs">
+      <DependentUpon>201603021116183_add-insta-userid-name.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603070913474_single-page-changes.cs" />
+    <Compile Include="Migrations\201603070913474_single-page-changes.Designer.cs">
+      <DependentUpon>201603070913474_single-page-changes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603070955490_update.cs" />
+    <Compile Include="Migrations\201603070955490_update.Designer.cs">
+      <DependentUpon>201603070955490_update.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Ingredient.cs" />
-    <Compile Include="Models\MeasureUnit.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\ViewModels\AdminViewModel.cs" />
@@ -216,6 +235,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ViewModels\ManageViewModels.cs" />
     <Compile Include="Models\Recipe.cs" />
+    <Compile Include="Models\ViewModels\RecipeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -224,6 +244,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\CreateRecipe.css" />
+    <Content Include="Content\img-placeholder.png" />
     <Content Include="Content\SideBar.css" />
     <Content Include="Content\logo.png" />
     <Content Include="Content\NavigationBar.css" />
@@ -242,11 +264,14 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
+    <Content Include="Scripts\app\CreateRecipe.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\instagram.js" />
     <Content Include="Scripts\jquery-2.2.0.js" />
     <Content Include="Scripts\jquery-2.2.0.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.dragsort-0.5.2.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -310,6 +335,8 @@
     <Content Include="Views\Shared\_SearchPartial.cshtml" />
     <Content Include="Views\Shared\_NavigationPartial.cshtml" />
     <Content Include="Views\Shared\_SideBar.cshtml" />
+    <Content Include="Views\Recipes\List.cshtml" />
+    <Content Include="Views\Shared\_AddRecipeModal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -322,6 +349,18 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201602211618288_init.resx">
       <DependentUpon>201602211618288_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603021104481_add-access-token.resx">
+      <DependentUpon>201603021104481_add-access-token.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603021116183_add-insta-userid-name.resx">
+      <DependentUpon>201603021116183_add-insta-userid-name.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603070913474_single-page-changes.resx">
+      <DependentUpon>201603070913474_single-page-changes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603070955490_update.resx">
+      <DependentUpon>201603070955490_update.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
